Add options to hack and show the results.